--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="./scripts.js"></script>
+    <script src="./scripts.js?v=1"></script>
     <script type="text/javascript">
       $(function () {
         $("#amlich-calendar").amLich({
